# batch-markdown-converter

./: .gitattributes  .gitignore  BUILD_AND_RELINK.md  COMPLIANCE.md  DESIGN.md  DISTRIBUTION.md  LICENSE  README.ko.md  README.md  RELEASE_NOTES.ko.md  RELEASE_NOTES.md  TESTING.md  THIRD_PARTY_NOTICES.md  app.py  app_en.py  pyproject.toml
core/: __init__.py  config.py  i18n.py  jobs.py  output_writer.py  process_manager.py  scanner.py  worker_entry.py
github/: README.md
github/English/: README.md
licenses/: Qt-PySide-NOTICE.txt  SOURCE_OFFER.md  cobble-BSD-2-Clause.txt  openpyxl-MIT.txt
release/: README.md
scripts/: build_app.command  build_english_app.command  generate_license_bundle.py  package_releases.command  prepare_english_github_release.command  prepare_korean_github_release.command  prepare_lgpl_sources.command  prune_qt_bundle.command  publish_english_github_release.command  publish_korean_github_release.command  run.command  run_english.command  setup.command  verify_releases.command
tests/: __init__.py  conftest.py  test_config.py  test_dog_progress_bar.py  test_english_version.py  test_full_end_to_end.py  test_gui_smoke.py  test_output_writer.py  test_process_edge_cases.py  test_process_manager.py  test_release_layout.py  test_scanner.py  test_segmented_control.py  test_switch_checkbox.py  test_theme.py  test_theme_switch.py  test_worker.py  test_worker_formats.py
ui/: dog_progress_bar.py  drop_zone.py  file_table.py  main_window.py  segmented_control.py  settings_dialog.py  switch_checkbox.py  theme.py  theme_switch.py
(+5 files in other folders)
